Fix bug in chrome where tooltip truncate text

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ body {
 
 .mat-tooltip {
   font-size: 14px;
+  word-break: break-all;
 }
 
 .mat-cell.mat-column-name {
